# django-simple-eventlog

./: .gitignore  LICENSE  README.md  pyproject.toml
django_simple_eventlog/: apps.py  mixins.py  models.py  serializers.py  services.py  urls.py  views.py
django_simple_eventlog/migrations/: 0001_initial.py  __init__.py
eventlog/: __init__.py  apps.py  choices.py  mixins.py  models.py  serializers.py  services.py  urls.py  views.py
