[project]
name = "django-eventlog"
version = "0.1.0"
description = "A reusable Django app for tracking and recording audit and event logs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=3.2",
    "djangorestframework>=3.12",
    "django-filter>=2.0"
]
authors = [
  { name="Thanapat Towantakawanich", email="Thanapat.mac@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eventlog"]

[project.urls]
"Homepage" = "https://github.com/MacFF/django-eventlog"
